unpackaged/main/default/objects/Financial_Analysis__c/Financial_Analysis__c.object-meta.xml
<CustomObject>
    <label>Financial Analysis</label>
    <nameField>
        <displayFormat>FA-{000000}</displayFormat>
        <label>Financial Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>