unpackaged/main/default/objects/Financial_Analysis__c/fields/Annual_share_of_Payback_Ratio_2__c.field-meta.xml
<CustomField>
    <fullName>Annual_share_of_Payback_Ratio_2__c</fullName>
    <label>Annual share of Payback Ratio 2 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>