unpackaged/main/default/objects/Financial_Analysis__c/fields/Contract_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Year__c</fullName>
    <label>Contract Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>