unpackaged/main/default/objects/Financial_Analysis__c/fields/Cost_Of_Capital_Assumed__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Capital_Assumed__c</fullName>
    <label>Cost Of Capital Assumed (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>