unpackaged/main/default/objects/Financial_Analysis__c/fields/ET_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing Method</label>
    <length>250</length>
    <type>Text</type>
</CustomField>