unpackaged/main/default/objects/Financial_Analysis__c/fields/ET_Vehicle_Unique_key__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Unique_key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Vehicle Unique key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>