unpackaged/main/default/objects/Financial_Analysis__c/fields/extraKMPrice__c.field-meta.xml
<CustomField>
    <fullName>extraKMPrice__c</fullName>
    <formula>((ROUND(Vehicle_Quote_Item__r.ET_Vehicle_Maintenance_Rate__c,5)) + 
(Vehicle_Quote_Item__r.ET_Vehicle_Original_Purchase_Price__c *0.05/30000) + 
(Vehicle_Quote_Item__r.ET_Vehicle_Original_Purchase_Price__c *0.045/30000)+
(Vehicle_Quote_Item__r.ET_Vehicle_Fuel_Rate__c *1.23))*1.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>extraKMPrice</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>