unpackaged/main/default/objects/Financial_Analysis__c/fields/Free_Cash_Flow_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Free_Cash_Flow_Cumulative__c</fullName>
    <label>Free Cash Flow(Cumulative)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>