unpackaged/main/default/objects/Financial_Analysis__c/fields/Internal_Rate_of_Return__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rate_of_Return__c</fullName>
    <label>Internal Rate of Return (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>