unpackaged/main/default/objects/Financial_Analysis__c/fields/Internal_Rate_of_Return_Target__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rate_of_Return_Target__c</fullName>
    <label>Internal Rate of Return %(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>