unpackaged/main/default/objects/Financial_Analysis__c/fields/Net_Present_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Present_Value__c</fullName>
    <label>Net Present Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>