unpackaged/main/default/objects/Financial_Analysis__c/fields/Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles__c</fullName>
    <label>Number of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>