unpackaged/main/default/objects/Financial_Analysis__c/fields/Payback_1__c.field-meta.xml
<CustomField>
    <fullName>Payback_1__c</fullName>
    <label>Payback 1</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>