unpackaged/main/default/objects/Financial_Analysis__c/fields/Payback_Period_in_Years_Target__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_in_Years_Target__c</fullName>
    <label>Payback Period in Years(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>