unpackaged/main/default/objects/Financial_Analysis__c/fields/Payback_Period_Years__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_Years__c</fullName>
    <label>Payback Period (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>