unpackaged/main/default/objects/Financial_Analysis__c/fields/Price_Per_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Pricing_Type__c</fullName>
    <label>Price Per Pricing Type</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>