unpackaged/main/default/objects/Financial_Analysis__c/fields/Price_Per_Year_excluding_VAT_Manpower__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Year_excluding_VAT_Manpower__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Price Per Year excluding VAT Manpower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>