unpackaged/main/default/objects/Financial_Analysis__c/fields/Price_Per_Year_including_VAT_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Year_including_VAT_Vehicle__c</fullName>
    <label>Price Per Year including VAT Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>