unpackaged/main/default/objects/Financial_Analysis__c/fields/Request_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Request_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Mapping</label>
    <referenceTo>ET_Request_Mapping__c</referenceTo>
    <relationshipLabel>Financial Analysis</relationshipLabel>
    <relationshipName>Financial_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>