unpackaged/main/default/objects/Financial_Analysis__c/fields/Resale_Value_used_for_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Resale_Value_used_for_Calculation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Resale Value used for Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>