unpackaged/main/default/objects/Financial_Analysis__c/fields/Return_on_Investment__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Investment__c</fullName>
    <label>Return on Investment (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>