unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Accountant_Profits_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Total_Accountant_Profits_Discounted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Accountant Profits Discounted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>