unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Annual_Price_including_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Price_including_VAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Annual Price including VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>