unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Annual_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Annual Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>