unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Driver_Profits__c.field-meta.xml
<CustomField>
    <fullName>Total_Driver_Profits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Driver Profits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>