unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Manpower_profit_used_for_calcs__c.field-meta.xml
<CustomField>
    <fullName>Total_Manpower_profit_used_for_calcs__c</fullName>
    <label>Total Manpower profit used for calcs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>