unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Nanny_Profits__c.field-meta.xml
<CustomField>
    <fullName>Total_Nanny_Profits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Nanny Profits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>