unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Profit_used_for_calculation__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit_used_for_calculation__c</fullName>
    <label>Total Profit used for calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>