unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Resale_Value__c</fullName>
    <label>Total Resale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>