unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Supervisor_Profits_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Supervisor_Profits_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Supervisor Profits Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>