unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Value_of_Rental__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Rental__c</fullName>
    <label>Total Value of Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>