unpackaged/main/default/objects/Financial_Analysis__c/fields/Total_Vehicle_Profit_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_Profit_Discounted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Vehicle Profit Discounted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>