unpackaged/main/default/objects/Financial_Analysis__c/fields/Utilization_factor__c.field-meta.xml
<CustomField>
    <fullName>Utilization_factor__c</fullName>
    <label>Utilization factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>