unpackaged/main/default/objects/Financial_Analysis__c/fields/VAT_Amount_for_Manpower__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_for_Manpower__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT Amount for Manpower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>