unpackaged/main/default/objects/Financial_Analysis__c/fields/VAT_on_Direct_Operational_Costs__c.field-meta.xml
<CustomField>
    <fullName>VAT_on_Direct_Operational_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT on Direct Operational Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>