unpackaged/main/default/objects/Financial_Analysis__c/fields/VAT_on_Nanny_Expenses__c.field-meta.xml
<CustomField>
    <fullName>VAT_on_Nanny_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT on Nanny Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>