unpackaged/main/default/objects/Financial_Analysis__c/fields/Vehicle_Finance_New__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Finance_New__c</fullName>
    <formula>0.0226* Working_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Finance New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>