unpackaged/main/default/objects/Financial_Analysis__c/fields/Vehicle_Financing_Update__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Financing_Update__c</fullName>
    <formula>Vehicle_Quote_Item__r.ET_Vehicle_Financing__c + (0.0226*Working_Capital__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Financing Update</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>