unpackaged/main/default/objects/Financial_Analysis__c/fields/Vehicle_Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Quote Item</label>
    <referenceTo>ET_Vehicle_Quote_Item__c</referenceTo>
    <relationshipLabel>Financial Analysis</relationshipLabel>
    <relationshipName>Financial_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>