unpackaged/main/default/objects/Financial_Analysis__c/fields/Workforce_Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workforce Quote Item</label>
    <referenceTo>ET_Workforce_Quote_Item__c</referenceTo>
    <relationshipLabel>Financial Analysis</relationshipLabel>
    <relationshipName>Financial_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>